src/rules/snapshots/pg_migration_lint__rules__pgm017__tests__add_unique_using_index_no_backing_index_fires.snap
---
source: src/rules/pgm017.rs
expression: findings
---
- rule_id: PGM017
  severity: Critical
  message: "ADD UNIQUE USING INDEX 'idx_nonexistent' on table 'orders': referenced index does not exist."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
