src/rules/snapshots/pg_migration_lint__rules__pgm017__tests__fires_on_existing_table_without_not_valid.snap
---
source: src/rules/pgm017.rs
assertion_line: 127
expression: findings
---
- rule_id: PGM017
  severity: Critical
  message: "Adding FOREIGN KEY constraint on existing table 'orders' without NOT VALID will scan the entire table while holding a SHARE ROW EXCLUSIVE lock. Use ADD CONSTRAINT ... NOT VALID, then VALIDATE CONSTRAINT in a separate statement."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
